Fix images for presentation, and text aligning

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,9 @@ body {
     }
 
     .details {
+        h1, h2, h3, h4, h5, h6 {
+            padding-left: 100px;
+        }
         text-align: left;
     }
 
